# personal-automation

./: .dockerignore  .flake8  .gitignore  .isort.cfg  CLAUDE.md  Dockerfile-bitwarden_backup  README.md  pyproject.toml
scripts/: raspberrypi_temps.sh
src/: bitwarden.py  config.py  parse_minecraft_logs.py  pull_home_assistant_configs.py  pull_router_configs.py  rotate_logs.py
src/utils/: config_utils.py  date_tools.py  display_tools.py
