[project]
name = "personal-automation"
version = "0.1.0"
description = "Homelab-only automation jobs split out of dotfiles (Bitwarden vault backup)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas>=2.2.3",
    "paramiko>=5.0.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.1",
    "scp>=0.16.0",
    "tabulate>=0.9.0",
]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "isort>=5.0.0",
]
